# daily-climate-forecasting

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  pytest.ini
.dvc/: config
.github/workflows/: pre-commit.yml  pytest.yml
climate_forecasting/: cli.py  commands.py  convert_trt.py  data.py  data_download.py  export.py  get_data.py  model.py  predict.py  register_model.py  train.py
configs/: __init__.py  config.yaml  data.yaml  logging.yaml  model.yaml  predict.yaml
configs/data/: data.yaml
configs/export/: export.yaml
configs/serve/: serve.yaml
configs/train/: train.yaml
data/raw/: daily_climate_data.csv.dvc
reports/: metrics.json
tests/: test_data_windows.py  test_model_shapes.py
