[project]
name = "daily-climate-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "hydra-core>=1.3.2",
    "scikit-learn>=1.8.0",
    "pytorch-lightning>=2.4.0",
    "mlflow>=2.16.0",
    "onnx>=1.16.2",
    "onnxruntime>=1.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[project.scripts]
dcf = "climate_forecasting.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["climate_forecasting"]
