[project]
name = "daily-climate-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<3.0",
    "hydra-core>=1.3.2",
    "scikit-learn>=1.3,<2.0",
    "pytorch-lightning>=2.2,<3.0",
    "mlflow>=2.16.0",
    "onnx>=1.16.2",
    "onnxruntime>=1.16,<2.0",
    "torch>=2.2,<3.0",
    "dvc>=3.0,<4.0",
    "fire>=0.5.0",
]

[project.scripts]
dcf = "climate_forecasting.commands:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["climate_forecasting"]
